load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

npm_link_all_packages()

js_library(
    name = "lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ) + [
        "tsconfig.json",
        "package.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

vitest_bin.vitest_test(
    name = "test",
    args = ["run", "--config", "vitest.config.ts"],
    chdir = package_name(),
    data = [
        ":lib",
        "vitest.config.ts",
        "package.json",
        "tsconfig.json",
        "//:node_modules/vitest",
    ] + glob(["**/*.test.ts"]) + [":node_modules"],
    size = "small",
)

# ─── OCI Image ───────────────────────────────────────────────────────────────

# Worker source code layer
genrule(
    name = "app_layer",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ) + [
        "tsconfig.json",
        "package.json",
    ],
    outs = ["app_layer.tar"],
    cmd = """
        mkdir -p $$TMPDIR/app/worker && \
        for f in $(SRCS); do \
            rel=$${f#worker/}; \
            mkdir -p $$TMPDIR/app/worker/$$(dirname $$rel); \
            cp $$f $$TMPDIR/app/worker/$$rel; \
        done && \
        tar -cf $(OUTS) -C $$TMPDIR app
    """,
    tags = ["no-sandbox"],
)

oci_image(
    name = "image",
    base = "@node_20_slim",
    tars = [":app_layer"],
    workdir = "/app",
    entrypoint = [
        "npx",
        "tsx",
        "worker/index.ts",
    ],
    exposed_ports = ["8787"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "image_tar",
    image = ":image",
    repo_tags = ["dashboard-chat/worker:bazel"],
    visibility = ["//visibility:public"],
)
