load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

npm_link_all_packages()

js_library(
    name = "lib",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.test.ts"],
    ) + [
        "tsconfig.json",
        "package.json",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

vitest_bin.vitest_test(
    name = "test",
    args = ["run", "--config", "vitest.config.ts"],
    chdir = package_name(),
    data = [
        ":lib",
        "vitest.config.ts",
        "package.json",
        "tsconfig.json",
        "//:node_modules/vitest",
    ] + glob(["**/*.test.ts"]) + [":node_modules"],
    size = "small",
)

# ─── OCI Image ───────────────────────────────────────────────────────────────

# Bundle worker to a single JS file via esbuild (same pattern as frontend Vite build)
genrule(
    name = "dist",
    srcs = [":lib"],
    outs = ["dist.tar"],
    cmd = """
        cd worker && \
        npx esbuild index.ts --bundle --platform=node --format=esm \
            --outfile=../$$TMPDIR/app/worker/index.mjs && \
        tar -cf - -C ../$$TMPDIR app > ../$(OUTS)
    """,
    tags = ["no-sandbox", "manual"],
)

oci_image(
    name = "image",
    base = "@node_20_slim",
    tars = [":dist"],
    workdir = "/app",
    entrypoint = ["node", "worker/index.mjs"],
    exposed_ports = ["8787"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "image_tar",
    image = ":image",
    repo_tags = ["dashboard-chat/worker:bazel"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
