[project]
name = "cyrus-ingress-infra"
version = "0.0.1"
description = "AWS CDK (Python) app for the Cyrus webhook ingress: a public Lambda Function URL that HMAC-verifies Linear webhooks and enqueues them to SQS for the local pump to drain."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.140,<3",
    "constructs>=10.0,<11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "boto3>=1.34",  # for the handler unit tests (botocore Stubber)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# "ingress" so the handler imports the (symlinked) top-level linear_signature
# exactly as it will at runtime in the Lambda; "." for the stacks package.
pythonpath = ["ingress", "."]

[tool.black]
line-length = 88
target-version = ["py311"]
