load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

js_library(
    name = "lib",
    srcs = glob(
        ["**/*.js", "**/*.mjs", "**/*.ts", "**/*.json"],
        exclude = ["**/*.test.ts", "**/*.test.js"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

# First-party workspace package. Linked into ui-state and agent node_modules
# via @dashboard-chat/shared-failure-simulation. Resolved by aspect_rules_js
# `//shared/failure-simulation:pkg` target when other packages reference the
# workspace dep. Mirrors the //shared/chat:pkg pattern (CLAUDE.md "Shared").
npm_package(
    name = "pkg",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)
