load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

js_library(
    name = "lib",
    srcs = glob(
        ["**/*.ts", "**/*.json"],
        exclude = ["**/*.test.ts"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":node_modules",
    ],
)

# First-party workspace package. Linked into ui-state and frontend node_modules
# via @dashboard-chat/ui-state-wire. The single source of truth for the
# ChatAppStateDocument + ChatAppWireEvent wire types (ADR-046 MR-3).
npm_package(
    name = "pkg",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)
