[project]
name = "dashboard-chat-acceptance-correlation-id"
version = "0.0.1"
description = "Acceptance tests for trace one request end-to-end (correlation id)."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "real_io: scenario uses real adapters (the local compose stack + real HTTP + real backend), costly externals (LLM) faked",
    "walking_skeleton: the cross-service scenario that proves the end-to-end correlation path",
    "error_path: explicit failure / rejection scenario (the correlation id must ride the error response)",
    "needs_compose_stack: scenario requires the local compose topology to be reachable on host ports",
]
addopts = [
    "-ra",
    "--strict-markers",
]
