[project]
name = "dashboard-chat-acceptance-dbt-test-validation"
version = "0.0.1"
description = "Acceptance tests for dbt-test-validation (ADR-019, Option β)."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-bdd>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    # Strategy C real-IO dependencies (DWD-1):
    # the eject_orchestrator session fixture imports the harness +
    # eject/validation packages, which transitively import these.
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "pandera>=0.29",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "walking_skeleton: walking-skeleton scenario (real-IO end-to-end smoke)",
    "real-io: scenario uses real adapters (real compose stack, real dbtRunner, real DuckDB, real MinIO)",
    "adapter-integration: scenario covers a driven adapter with real I/O",
    "driving_adapter: scenario invokes the user's actual entry point (DatasetLayerHarness Python facade)",
    "earned_trust: scenario verifies an earned-trust probe (principle 12)",
    "probe: scenario forces a substrate lie and asserts skip-with-named-probe",
    "requires_external: scenario needs an external service that may be unavailable (e.g. Groq)",
    "slow: scenario is expected to take >10s wall-clock",
    "pending: scenario authored but not yet enabled — DELIVER turns these on one at a time",
]
addopts = [
    "-ra",
    "--strict-markers",
    # Default: skip @pending scenarios. DELIVER overrides per-scenario.
    "-m", "not pending",
]
